# src/main/java/ru/ontology/controller/OntologyController.java
@@ -3,6 +3,7 @@ package ru.ontology.controller;
 import io.swagger.annotations.Api;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.OntologyApi;
+import org.openapitools.model.OntologyCreateUpdateDto;
 import org.openapitools.model.OntologyViewDto;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -11,7 +12,6 @@ import org.springframework.web.multipart.MultipartFile;
 import ru.ontology.service.project.OntologyService;
 
 import javax.validation.Valid;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -21,6 +21,25 @@ import java.util.Optional;
 public class OntologyController implements OntologyApi {
 
     private final OntologyService service;
+
+    @Override
+    public ResponseEntity<Long> createOntology(OntologyCreateUpdateDto dto) {
+        return ResponseEntity.of(Optional.of(
+                service.createOntology(dto)
+        ));
+    }
+
+    @Override
+    public ResponseEntity<Void> updateOntologyById(Long ontologyId, OntologyCreateUpdateDto dto) {
+        service.updateOntology(dto);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteOntologyById(Long ontologyId) {
+        service.deleteOntology(ontologyId);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
 
     @Override
     public ResponseEntity<OntologyViewDto> getOntologyById(Long ontologyId) {
