# src/main/resources/swagger/api.yml
@@ -8,6 +8,32 @@ info:
 servers:
   - url: ''
 paths:
+
+  /api/ontology:
+    post:
+      tags:
+        [ ontology ]
+      operationId: createOntology
+      requestBody:
+        description: Authorized Person Body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OntologyCreateUpdateDto'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: integer
+                format: int64
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
   /api/ontology/{ontologyId}:
     get:
       tags:
@@ -32,7 +58,50 @@ paths:
                 $ref: '#/components/schemas/OntologyViewDto'
         "500":
           description: Internal Server Error
-
+    put:
+      tags:
+        [ ontology ]
+      operationId: updateOntologyById
+      requestBody:
+        description: Authorized Person Body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OntologyCreateUpdateDto'
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+    delete:
+      tags:
+        [ ontology ]
+      operationId: deleteOntologyById
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
   /api/ontologies:
     get:
       tags:
@@ -73,6 +142,131 @@ paths:
         "500":
           description: Internal Server Error
 
+  /api/ontology/{ontologyId}/class:
+    post:
+      tags:
+        [ class ]
+      summary: Create class
+      description: Create new class
+      operationId: createClass
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Class body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClassCreateUpdateDto'
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+
+  /api/ontology/{ontologyId}/class/{classId}:
+    get:
+      tags:
+        [ class ]
+      operationId: getClassById
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+        - name: classId
+          in: path
+          description: class id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClassViewDto'
+        "500":
+          description: Internal Server Error
+    put:
+      tags:
+        [ class ]
+      operationId: updateClassById
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+        - name: classId
+          in: path
+          description: instance id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Instance body
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClassCreateUpdateDto'
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+    delete:
+      tags:
+        [ class ]
+      operationId: deleteClassById
+      parameters:
+        - name: ontologyId
+          in: path
+          description: ontology id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+        - name: classId
+          in: path
+          description: class id
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+
   /api/ontology/{ontologyId}/instances:
     get:
       tags:
@@ -97,6 +291,8 @@ paths:
                 $ref: '#/components/schemas/InstanceListDto'
         "500":
           description: Internal Server Error
+
+  /api/ontology/{ontologyId}/instance:
     post:
       tags:
         [ instance ]
@@ -221,7 +417,7 @@ paths:
         "500":
           description: Internal Server Error
 
-  /api/v1/ontology/file:
+  /api/ontology/file:
     post:
       tags:
         [ ontology ]
@@ -243,33 +439,18 @@ paths:
         "500":
           description: Internal Server Error
 
-  /api/v1/ontology/{ontologyId}/file:
-    get:
-      tags:
-        [ ontology ]
-      operationId: downloadOntologyOwlXml
-      parameters:
-        - name: ontologyId
-          in: path
-          description: ontology id
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-        "500":
-          description: Internal Server Error
-
 components:
   schemas:
+
+    OntologyCreateUpdateDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+
     OntologyViewDto:
       type: object
       properties:
@@ -309,6 +490,21 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/ClassViewDto'
+
+    ClassCreateUpdateDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        classNames:
+          type: string
+        attributes:
+          type: string
+        relations:
+          type: string
 
     AttributeViewDto:
       type: object
@@ -361,9 +557,18 @@ components:
           format: int64
         name:
           type: string
-        classTypeId:
-          type: integer
-          format: int64
+        classNames:
+          type: array
+          items:
+            type: string
+        attributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/AttributeValueViewDto'
+        relations:
+          type: array
+          items:
+            $ref: '#/components/schemas/RelationInstanceViewDto'
 
     AttributeValueViewDto:
       type: object
